# 2d-physics-playground

./: Cargo.toml  index.html  package-lock.json  readme.md  webpack.config.js
src/: lib.rs
src/math/: vec2.rs
src/physics/: collider.rs  epa.rs  gjk.rs  mod.rs  rigid_body.rs  world.rs
src/physics/dynamics/: force_emitter.rs  mod.rs
src/physics/primitive/: capsule.rs  circle.rs  mod.rs  shape.rs  triangle.rs
src/scene/: camera.rs  color.rs  context.rs  mod.rs
